# meadow

./: .dockerignore  .gitignore  .iex.exs  .kodiak.toml  .tool-versions  Dockerfile  Dockerfile.livebook  Jenkinsfile  Localstack S3.duck  Makefile  README.md  coveralls.json  docker-compose.yml  mix.exs  package-lock.json  spec.json
.circleci/: config.yml  local.yml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
app/: .dockerignore  .iex.exs  .mix_tasks  Dockerfile  Makefile  mix.exs
app/priv/python/agent/: pyproject.toml
app/priv/python/agent/src/meadow_metadata_agent/: __init__.py  execute.py  initialize.py  message_handler.py  prompts.py  tools.py
app/priv/python/integration/: AGENTS.md  agent_integration.py  agent_test.py  pyproject.toml
assets/: .babelrc  jest.config.js  jest.setup.js  jsconfig.json  package-lock.json  package.json  report.20200427.151245.9321.0.001.json  tailwind.config.js  webpack.config.js
config/: .credo.exs  config.exs  dev.exs  grafana.env  prod.exs  prod.secret.exs  releases.exs  sequins.exs  test.exs
lambdas/: lambda.mk  template.local.yaml  template.yaml
lib/: edtf.ex  meadow.ex  meadow_web.ex  media_convert.ex  sqns.ex
livebook/: Dockerfile  aws-s3  bootstrap.exs  meadow_livebook_auth.exs  mix.exs  startup.livemd
rel/: vm.args.eex
support/: ldap_helpers.ex
terraform/: .terraform.lock.hcl  .tool-versions  digest_event.tf  ec2.tf  ecs.tf  ecs_services.tf  elasticsearch_user.tf  lambdas.tf  layers.tf  main.tf  outputs.tf  sequins.tf  stream_authorizer.tf  upload_user.tf  variables.tf
(+2978 files in other folders)
