[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meadow-metadata-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "claude-agent-sdk @ git+https://github.com/Riehantunut/claude-code-sdk-python-image.git",
  "boto3>=1.34.0",
  "requests>=2.32.5",
  "mcp[cli]>=1.14.1",
  "imageio>=2.37.0"
]

[tool.setuptools.packages.find]
where = ["src"]
